--- a/templates/g3.html
+++ b/templates/g3.html
@@ -16,10 +16,10 @@
 
 <script>
 
-const http = new XMLHttpRequest()
+const http = new XMLHttpRequest();
 
-http.open("GET", "http://127.0.0.1:5000/pad/store/k1")
-http.send()
+http.open("GET", "http://127.0.0.1:5000/pad/store/k1");
+http.send();
 
 alert(http.responseText)
 
