--- a/templates/sonda.html
+++ b/templates/sonda.html
@@ -7,9 +7,9 @@
 var APIURL = "http://167.86.94.15:5000/";
 
 
-document.getElementById("tohome").href = APIURL
+document.getElementById("tohome").href = APIURL;
 
-document.formulario.action= APIURL + "putsonda11"
+document.formulario.action= APIURL + "putsonda11";
 
 function getapi(url) {
 
@@ -43,7 +43,7 @@ function setapi(url_comando,datos) {
         } else {
 		    console.error(users);
         }
-   }
+   };
     xhr.send(datos);
    }
 
@@ -115,7 +115,7 @@ function setapi(url_comando,datos) {
 
 
 
-document.getElementById("tohome").href = APIURL
+document.getElementById("tohome").href = APIURL;
 
 document.formulario.action= APIURL + "putsonda11"
 
