--- a/templates/wordcloud.html
+++ b/templates/wordcloud.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='css/wordcloud.css') }}">
 <script>
 let arrayDePalabras = {{words}}
-let newarr = [];
+let; newarr = [];
 arrayDePalabras.forEach(x => {
 	if(estaEnElOtro(newarr,x)){
 		newarr.push(x);
