--- a/templates/chatprove.html
+++ b/templates/chatprove.html
@@ -87,7 +87,7 @@
 
 <script language="JavaScript">
 
-document.getElementById("texto").focus()
+document.getElementById("texto").focus();
 
 var APIURL = "http://167.86.94.15:5000/";
 
@@ -101,16 +101,16 @@ var APIURL = "http://167.86.94.15:5000/";
 
 function iniciar() {
 
-var vid_exp = document.getElementById("id_exp").value
+var vid_exp = document.getElementById("id_exp").value;
 
-url = APIURL + "pad/chatprove/?id=" + vid_exp + "&texto=reiniciar"
+url = APIURL + "pad/chatprove/?id=" + vid_exp + "&texto=reiniciar";
 
-console.log(url)
+console.log(url);
 
-document.getElementById("texto").value = "reiniciar"
+document.getElementById("texto").value = "reiniciar";
 
 
-document.getElementById("form").submit()
+document.getElementById("form").submit();
 
 //location.reload()
 
@@ -122,9 +122,9 @@ document.getElementById("texto").focus()
 
 function verconversacion() {
 
-    var vid_exp = document.getElementById("id_exp").value
+    var vid_exp = document.getElementById("id_exp").value;
 
-    url = APIURL + "pad/viewexp2/?id=" + vid_exp
+    url = APIURL + "pad/viewexp2/?id=" + vid_exp;
 
     window.open(url)
 
@@ -137,18 +137,18 @@ function verconversacion() {
 function makeurl(){
 
 
-var vid_exp = document.getElementById("id_exp").value
-var vtexto = document.getElementById("texto").value
+var vid_exp = document.getElementById("id_exp").value;
+var vtexto = document.getElementById("texto").value;
 
 
 
 
-url = APIURL + "pad/chatprove/?id=" + vid_exp + "&texto="+ vtexto
+url = APIURL + "pad/chatprove/?id=" + vid_exp + "&texto="+ vtexto;
 
 
-document.getElementById("form").action = url
+document.getElementById("form").action = url;
 
-console.log(document.getElementById("form").action)
+console.log(document.getElementById("form").action);
 
 document.getElementById("texto").focus()
 
@@ -189,7 +189,7 @@ function setapi(url_comando,datos) {
         } else {
 		    console.error(users);
         }
-   }
+   };
     xhr.send(datos);
    }
 
