--- a/templates/chatprove_public2019-05-12.html
+++ b/templates/chatprove_public2019-05-12.html
@@ -389,7 +389,7 @@
 
 <script language="JavaScript">
 
-document.getElementById("texto").focus()
+document.getElementById("texto").focus();
 
 var APIURL = "http://167.86.94.15:5000/";
 
@@ -403,16 +403,16 @@ var APIURL = "http://167.86.94.15:5000/";
 
 function iniciar() {
 
-var vid_exp = document.getElementById("id_exp").value
+var vid_exp = document.getElementById("id_exp").value;
 
-url = APIURL + "pad/chatprove/?id=" + vid_exp + "&texto=reiniciar"
+url = APIURL + "pad/chatprove/?id=" + vid_exp + "&texto=reiniciar";
 
-console.log(url)
+console.log(url);
 
-document.getElementById("texto").value = "reiniciar"
+document.getElementById("texto").value = "reiniciar";
 
 
-document.getElementById("form").submit()
+document.getElementById("form").submit();
 
 //location.reload()
 
@@ -424,9 +424,9 @@ document.getElementById("texto").focus()
 
 function verconversacion() {
 
-    var vid_exp = document.getElementById("id_exp").value
+    var vid_exp = document.getElementById("id_exp").value;
 
-    url = APIURL + "pad/viewexp2/?id=" + vid_exp
+    url = APIURL + "pad/viewexp2/?id=" + vid_exp;
 
     window.open(url)
 
@@ -439,21 +439,21 @@ function verconversacion() {
 function makeurl(){
 
 
-var vid_exp = document.getElementById("id_exp").value
-var vtexto = document.getElementById("texto").value
-var vnro = document.getElementById("nro").value
+var vid_exp = document.getElementById("id_exp").value;
+var vtexto = document.getElementById("texto").value;
+var vnro = document.getElementById("nro").value;
 
 
-url = APIURL + "pad/chatprove_public/?id=" + vid_exp + "&texto="+ vtexto + "&nro="+vnro
+url = APIURL + "pad/chatprove_public/?id=" + vid_exp + "&texto="+ vtexto + "&nro="+vnro;
 
-url = APIURL + "pad/chatprove/?id=" + vid_exp
+url = APIURL + "pad/chatprove/?id=" + vid_exp;
 
-console.log(url)
+console.log(url);
 
 
-document.getElementById("form").action = url
+document.getElementById("form").action = url;
 
-console.log(document.getElementById("form").action)
+console.log(document.getElementById("form").action);
 
 document.getElementById("texto").focus()
 
@@ -494,7 +494,7 @@ function setapi(url_comando,datos) {
         } else {
 		    console.error(users);
         }
-   }
+   };
     xhr.send(datos);
    }
 
