--- a/templates/wordanalysis.html
+++ b/templates/wordanalysis.html
@@ -23,21 +23,6 @@
 		<div class="subcontainer container">
 		<h4 class="title">Rango horario de las respuestas</h4>
 		<hr style="border: 0.5px solid black; width: 100%;">
-		<!-- <table>
-			<tr>
-				<th>Fecha inicial</th>
-				<th>Fecha final</th>
-				<th>Hora inicial</th>
-				<th>Hora final</th>
-			</tr>
-			<tr>
-				<td>FI</td>
-				<td>HI</td>
-				<td>FF</td>
-				<td>HF</td>
-			</tr>
-		</table> -->
-
 
 
 		<table class="table table-striped table-dark datetime-table" >
@@ -53,10 +38,10 @@
 			<tbody>
 				<tr class="table-info">
 					<th scope="row"><img  src="{{ url_for('static', filename='img/calendar.png') }}" alt=""></th>
-					<td>xx/xx/xxxx</td>
-					<td>yy:yy hs</td>
-					<td>xx/xx/xxxx</td>
-					<td>yy:yy hs</td>
+					<td>{{primeraFecha}}</td>
+					<td>{{ultimaFecha}}</td>
+					<td>{{primeraHora}}</td>
+					<td>{{ultimaHora}}</td>
 				</tr>
 			</tbody>
 		</table>
@@ -65,11 +50,11 @@
 
 	<div class="most-active-day analysis-section container">
 		<div class="subcontainer container">
-		<h5>Día más activo (Mayor cantidad de mensajes):</h5>
+		<h5>Día más activo (Mayor cantidad de respuestas):</h5>
 		<hr style="border: 0.5px solid black; width: 100%;">
-		<h4>xx/xx/xxxx</h4>
-		<h6>Cantidad de mensajes:</h6>
-		<h6>xxx</h6>
+		<h4>{{masmensajes}}</h4>
+		<h6>Cantidad de respuestas:</h6>
+		<h6>{{cantmasmensajes}}</h6>
 		</div>
 	</div>
 
@@ -92,11 +77,11 @@
 		<hr style="border: 0.5px solid black; width: 100%;">
 		<div id="days-messages" class=" card totalizator-card">
 			<h5>Cantidad de días en los que se enviaron mensajes</h5>
-			<h3>#</h3>
+			<h3>{{cantDiasRtas}}</h3>
 		</div>
 		<div id="amount-words-answers" class="card totalizator-card">
 			<h5>Cantidad de palabras en las respuestas</h5>
-			<h3>#</h3>
+			<h3>{{ cantPalabras  }}</h3>
 		</div>
 		<div id="amount-letters" class="card totalizator-card">
 			<h5>Cantidad de letras en las respuestas</h5>
