Advanced a lot, only plot left

--- a/templates/wordanalysis.html
+++ b/templates/wordanalysis.html
@@ -85,7 +85,7 @@
 		</div>
 		<div id="amount-letters" class="card totalizator-card">
 			<h5>Cantidad de letras en las respuestas</h5>
-			<h3>#</h3>
+			<h3>{{ cantLetras }}</h3>
 		</div>
 		<!-- <div class="amount-letters" class="card totalizator-card">
 			<h5>Cantidad de letras en las respustas</h5>
@@ -98,19 +98,19 @@
 		<hr style="border: 0.5px solid black; width: 100%;">
 		<div class=" card average-card" id="words-average">
 			<h5>Cantidad de palabras promedio (por respuesta)</h5>
-			<h3>#</h3>
+			<h3>{{ promedioPalabrasPorRta }}</h3>
 		</div>
 		<div class=" card average-card" id="letters-average">
 			<h5>Cantidad de letras promedio (Por respuesta)</h5>
-			<h3>#</h3>
+			<h3>{{ promLetrasRta }}</h3>
 		</div>
 		<div class=" card average-card">
 			<h5>Cantidad de respuestas promedio (Por día)</h5>
-			<h3>#</h3>
+			<h3>{{ promRtaPorDia }}</h3>
 		</div>
 		<div class=" card average-card">
 			<h5>Cantidad de letras promedio (Por día)</h5>
-			<h3>#</h3>
+			<h3>{{ promedioLetrasPorDia }}</h3>
 		</div>
 
 	</div>
