Finished word analysis module

--- a/templates/pivote-output.html
+++ b/templates/pivote-output.html
@@ -49,8 +49,8 @@
 </style>
 <script>
 	let selectedJson = {{json | safe}}
-	let; modo = {{modo}}
-	let; objReporte = {};
+	let modo = {{modo}}
+	let objReporte = {};
 	switch (modo) {
 		case 1:
 			objReporte = {
