--- a/templates/wordanalysis.html
+++ b/templates/wordanalysis.html
@@ -15,7 +15,7 @@
 
 <div class="jumbotron main-container">
 	<div class="header">
-		<h3>Análisis de texto</h3>
+		<h3>Análisis textual completo</h3>
 		<hr>
 	</div>
 	<!-- Datetime inicial + final -->
