--- a/templates/wordanalysis.html
+++ b/templates/wordanalysis.html
@@ -114,6 +114,13 @@
 		</div>
 
 	</div>
+
+    <div class="analysis-section container">
+        <h3>Clasificador de palabras</h3>
+        <ul>
+        <!--{% for element in words %}<li>{{element}}</li>{% endfor %}-->
+        </ul>
+    </div>
 </div>
 {% endblock %}
 
