Now we got dat f***ing object

--- a/static/css/output.css
+++ b/static/css/output.css
@@ -61,9 +61,11 @@ div.pivote-container>div#wdr-component {
 		flex-direction: column;
 		justify-content: center;
 		align-items: center;
-		padding-inline-start: 0px;
+		padding-inline-start: 0;
 	}
-
+	body{
+		min-height: 100%;
+	}
 	.btn {
 		width: 100%;
 		margin: 5px auto;
