--- a/templates/pivote-analysis.html
+++ b/templates/pivote-analysis.html
@@ -88,7 +88,7 @@
                         <li>
                             <!-- ACA VA EL FUCKIN ETIQUETADOR MORFOSINTACTICO-->
                             <div class="item-menu subitem-menu">
-                                <img width="25px" src="{{ url_for('static', filename='img/cloud.png') }}" alt="cloud">
+                                <img width="25px" src="{{ url_for('static', filename='img/tag.png') }}" alt="cloud">
                                 <form action="/wordcloud" method="POST" id="wordcloud">
                                     <input type="hidden" name="wordcloud" id="wordcloud" value="{{ json }}">
                                     <button class="button-submit" type="submit"> Etiquetador Morfosintactico</button>
