--- a/static/css/language.css
+++ b/static/css/language.css
@@ -1,3 +1,22 @@
+body{
+    display: grid;
+    grid-template-columns: 0.5fr 5fr 0.5fr;
+    grid-template-rows: 0.3fr 5fr 0.5fr;
+    grid-template-areas:
+        "header header header"
+        ". main ."
+        "footer footer footer";
+
+}
+footer#footer{
+    grid-area: footer;
+}
+header#header{
+    grid-area: header;
+}
+main#main{
+    grid-area: main;
+}
 hr{
     border-top: 1px solid black !important;
 }
@@ -7,7 +26,4 @@ main{
     justify-content: center;
     align-items: center;
     text-align: center;
-}
-img{
-
 }
