--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -1,61 +1,31 @@
-.colors {
-	--blue: #0097e6;
-	--darkblue: #337ab7;
-	--red: #d9534f;
-	--hover: #f9f9f9;
-	--white: #ffffff;
-	--yellow: #ffa500;
-	--green: #008000;
-	--turquoise: #35bfa3;
+body {
+	display: grid;
+	grid-template-columns: 0.5fr 3fr 0.5fr;
+	grid-template-rows: 0.3fr 5fr 0.3fr;
+	grid-row-gap: 2vh;
+	grid-template-areas:
+		"header header header"
+		". main ."
+		"footer footer footer";
+	background: #337ab7;
 }
-
-body,
-html {
-	/* margin: 0;
-	padding: 0;
-	height: 100%; */
-	background: #757F9A;
-	font-family:
-		'Open Sans',
-		-apple-system,
-		BlinkMacSystemFont,
-		'Segoe UI',
-		Roboto,
-		Oxygen,
-		Ubuntu,
-		Cantarell,
-		'Open Sans',
-		'Helvetica Neue',
-		sans-serif;
-	position: relative;
+header#header {
+	grid-area: header;
 }
-
-.layout-top-nav {
-	display: flex;
-	flex-direction: row;
-	justify-content: flex-end;
-	align-items: center;
+header#header>nav#header-navbar{
 	background: white;
-	margin-bottom: 30px;
+	height: 100%;
 }
-
-.layout-bottom-nav {
+main#main {
+	grid-area: main;
+}
+footer#footer {
+	grid-area: footer;
+	height: 100%;
+}
+footer#footer>nav#footer-navbar{
 	background: white;
+	height: 100%;
 }
 
-.site {
-	display: flex;
-    min-height: 87.2vh;
-	flex-direction: column;
-}
 
-.site-content {
-	flex: 1;
-}
-
-footer{
-	position: absolute;
-	bottom: 0;
-	width: 100%;
-	
-}
