--- a/static/css/output.css
+++ b/static/css/output.css
@@ -1,18 +1,112 @@
+
 .wdr-cell,
 .wdr-header,
 .wdr-header-r,
 .wdr-level-0,
 .wdr-h-sort {
-	width: 70px;
+    width: 70px;
 }
 
 .back-btn {
-	padding: 3px 15px 3px 15px;
-	background: lightblue;
-	border-radius: 5px;
-	margin-left: 5px;
+    padding: 1vh 2vw 1vh 2vw;
+    background: lightblue;
+    border-radius: 5px;
+    margin-left: 5vw;
 }
 
+body {
+    grid-template-columns: 0.5fr 3fr 0.5fr;
+    grid-template-rows: 0.3fr 5fr 0.5fr;
+    grid-row-gap: 1vh;
+    grid-template-areas:
+			"header header header"
+			"main main main"
+			"footer footer footer";
+}
+main#main{
+	display: grid;
+	grid-template-areas: "wdr-component-z";
+}
+div#wdr-component-z{
+	grid-area: wdr-component-z;
+}
+header#header > nav#header-navbar {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+    padding: 1vh 0;
+}
+
+header#header > nav#header-navbar > * {
+	margin-right: 1vw;
+}
+
+footer#footer > nav#footer-navbar {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-evenly;
+	align-items: center;
+}
+button {
+    -webkit-appearance: none;
+    -webkit-writing-mode: horizontal-tb !important;
+    text-rendering: auto;
+    color: inherit;
+    display: inline-block;
+    text-align: center;
+    align-items: flex-start;
+    cursor: pointer;
+    margin: 0 !important;
+    font: inherit;
+    padding: inherit;
+    border-width: 0;
+    border-style: none;
+    border-color: transparent;
+    border-image: none;
+}
+div#wdr-pivot-view{
+    max-width: 100vw;
+}
+#wdr-grid-layout{
+    height: 5000px !important;
+}
+@media (max-width: 690px) {
+	header#header > nav#header-navbar> *{
+		width: 35vw;
+		flex-direction: column-reverse;
+        align-items: center;
+        justify-content: center;
+		/*margin: 1vh auto;*/
+	}
+    header#header > nav#header-navbar >form>button{
+        width: 100%;
+        height: 100%;
+    }
+	footer#footer > nav#footer-navbar, header#header > nav#header-navbar{
+		flex-direction: column;
+	}
+	footer#footer > nav#footer-navbar > *{
+		width: 40vw;
+		margin: 1vh auto;
+	}
+    div.back-btn,a.back-btn{
+        width: 158px !important;
+        display: flex;
+        justify-content: center !important;
+        align-items: center !important;
+        margin: 1vh 0 0 0;
+    }
+    header#header>form:first-of-type{
+        width: 158px !important;
+        margin: 0 auto;
+    }
+    div#pivote-container, main#main, body{
+        height: 85vh !important;
+    }
+}
+
+/*
 .pivote-container {
 	display: flex;
 	justify-content: center;
@@ -73,4 +167,4 @@ div.pivote-container>div#wdr-component {
 	#lastbtn{
 		margin-bottom: 20px;
 	}
-}
+}*/
