--- a/templates/pivote-layout.html
+++ b/templates/pivote-layout.html
@@ -4,7 +4,8 @@
 <head>
 	{% block head %}
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0'>
+
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
 		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -23,23 +24,22 @@
 	{% endblock %}
 </head>
 
-<body class="site">
-	<header>
-		<nav class="navbar layout-top-nav">
+<body>
+	<header id="header">
+		<nav id="header-navbar">
 			{% block nav %}
 			{% endblock %}
 		</nav>
 	</header>
-	<main class="site content">
+	<main id="main">
 		{% block content %}
 		{% endblock %}
 	</main>
-	<footer>
-		<nav class="navbar layout-bottom-nav bottom">
+	<footer id="footer">
+		<nav id="footer-navbar">
 			{% block footer %}
 			{% endblock %}
 		</nav>
 	</footer>
 </body>
-
 </html>
