--- a/templates/wordcloud.html
+++ b/templates/wordcloud.html
@@ -8,24 +8,19 @@
 {{ super() }}
 <link rel="stylesheet" href="{{ url_for('static', filename='css/wordcloud.css') }}">
 <script>
-let arrayDePalabras = {{words}}
-let; newarr = [];
+let arrayDePalabras = {{words}};
+let newarr = [];
 arrayDePalabras.forEach(x => {
 	if(estaEnElOtro(newarr,x)){
 		newarr.push(x);
 	}else{
-		continue;
+		console.log("Python is better than this");
 	}
 });
 alert(newarr);
 function estaEnElOtro(arraycito, palabrita){
 	arraycito.forEach(y => {
-		if(y == palabrita){
-			return true;
-		}
-		else{
-			return false;
-		}
+		return y === palabrita;
 	});
 }
 </script>
@@ -37,7 +32,7 @@ function estaEnElOtro(arraycito, palabrita){
 {% endblock %}
 
 {% block content %}
-
+{{ super() }}
 <div class="jumbotron">
 	<h1>Nube de palabras generada</h1>
 	<hr>
